--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,43 @@ body,
   /* overflow: hidden; */
 }
 
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #090e16 #6d7375;
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #6d7375;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #b8c0c2;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #b8c0c2;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #090e16;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #424242;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #101b0c;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
