--- a/app/globals.css
+++ b/app/globals.css
@@ -50,6 +50,25 @@ body,
   background-color: #101b0c;
 }
 
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.dark {
+  .dark\:background-main {
+    background: linear-gradient(300deg, #1f1d1d, #020202, #1d1f1f);
+  }
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
